--- a/User-Profile.html
+++ b/User-Profile.html
@@ -617,6 +617,9 @@
             .search-bar {
                 display: none;
             }
+            #search-container{
+                display: none;
+            }
         }
     </style>
 </head>
@@ -632,7 +635,7 @@
                     </div>
                 </div>
                 <div class="flex items-center">
-                    <div class="relative mx-4 w-64 md:w-96">
+                    <div class="relative mx-4 w-64 md:w-96" id="search-container">
                         <input type="text" id="search-bar" placeholder="Search recipes..."
                             class="search-bar w-full pl-10 pr-10 py-2 rounded-full border border-gray-300 focus:border-red-400 focus:ring-0" aria-label="Search recipes">
                         <span class="fas fa-search absolute left-3 top-3 text-gray-400" role="img" aria-hidden="true"></span>
